Bug 20329: Shorten the width of text input fields
This makes the text input fields fit tidily within the border of the
fieldset class elements they are within.

Test plan:
1. Go to the acqui/invoices.pl, members/members-home.pl,
circ/overdue.pl, acqui/parcel.pl and notice that the text input fields
on the fieldset element on the left hand side of the screen for
filtering search results are too wide and go over the border of the
fieldset element

2. Apply patch

3. Refresh the aforementioned pages and notice the text inputs have a
shortened width and now fit within the fielset class element

Sponsored-By: Catalyst IT

--- a/koha-tmpl/intranet-tmpl/prog/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/staff-global.css
@@ -125,6 +125,11 @@ input[type="checkbox"], input[type="radio"] {
     margin: 0;
 }
 
+/*Set width of filter input text boxes*/
+input[name="borname"], input[id="searchmember_filter"], input[id="bookseller"], input[id="publisher"], input[id="callnumber"], input[id="title"], input[id="issn"], input[id="invoicenumber"], input[id="isbneanissn"], input[id="author"], input[id="publicationyear"], input[id="summaryfilter"], input[id="basketfilter"], input[id="basketgroupnamefilter"], input[id="orderfilter"] {
+    width:140px;
+}
+
 label, .label {
     display: inline;
     font-weight: normal;
